[INFER] Don't change prototype of new objects when reusing type in Array.{slice,splice,concat}. bug 683140.